--- a/frontend/src/auditor/auditor.html
+++ b/frontend/src/auditor/auditor.html
@@ -31,7 +31,7 @@
 
       .container {
         padding: 30px;
-        max-width: 1100px;
+        max-width: 1200px;
         margin: auto;
       }
 
@@ -62,6 +62,7 @@
         border-bottom: 1px solid #ddd;
         text-align: left;
         font-size: 14px;
+        vertical-align: top;
       }
 
       th {
@@ -86,6 +87,16 @@
         color: red;
         font-weight: bold;
       }
+
+      .verified {
+        color: green;
+        font-weight: bold;
+      }
+
+      .tampered {
+        color: red;
+        font-weight: bold;
+      }
     </style>
   </head>
 
@@ -100,17 +111,18 @@
         <h3>Audit View – Trade Documents</h3>
 
         <div class="note">
-          🧾 This is a read-only audit view. Status updates are controlled by
-          the bank and reflected here automatically.
+          🧾 This is a read-only audit view. Document integrity is verified by
+          comparing stored hash with the file on disk.
         </div>
 
         <table>
           <thead>
             <tr>
-              <th>ID</th>
+              <th>#</th>
               <th>File Name</th>
               <th>Hash</th>
               <th>Status</th>
+              <th>Integrity</th>
             </tr>
           </thead>
           <tbody id="auditTable"></tbody>
@@ -139,22 +151,34 @@
             },
           });
 
-          const docs = await res.json();
+          if (!res.ok) throw new Error();
+
+          let docs = await res.json();
+
+          // ✅ SORT BY ID (number-wise)
+          docs.sort((a, b) => a.id - b.id);
+
           const table = document.getElementById("auditTable");
           table.innerHTML = "";
 
-          docs.forEach((doc) => {
+          docs.forEach((doc, index) => {
             let statusClass = "pending";
             if (doc.status === "ACCEPTED") statusClass = "accepted";
             if (doc.status === "REJECTED") statusClass = "rejected";
 
+            const integrityHtml = doc.tampered
+              ? `<span class="tampered">❌ Tampered</span>`
+              : `<span class="verified">✅ Verified</span>`;
+
             const row = document.createElement("tr");
             row.innerHTML = `
-        <td>${doc.id}</td>
-        <td>${doc.filename}</td>
-        <td class="hash">${doc.file_hash}</td>
-        <td class="${statusClass}">${doc.status}</td>
-      `;
+              <td>${index + 1}</td>
+              <td>${doc.filename}</td>
+              <td class="hash">${doc.file_hash}</td>
+              <td class="${statusClass}">${doc.status}</td>
+              <td>${integrityHtml}</td>
+            `;
+
             table.appendChild(row);
           });
         } catch (err) {
