--- a/frontend/src/admin/admin.html
+++ b/frontend/src/admin/admin.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Admin Dashboard</title>
+    <title>Admin Dashboard | Trade Finance</title>
 
     <style>
       body {
-        font-family: Arial;
-        background: #f4f6f9;
         margin: 0;
+        font-family: Arial, sans-serif;
+        background: #f4f6f9;
       }
+
       header {
         background: #1a202c;
         color: white;
@@ -18,7 +19,8 @@
         justify-content: space-between;
         align-items: center;
       }
-      .logout-btn {
+
+      .logout {
         background: #e53e3e;
         border: none;
         padding: 8px 14px;
@@ -26,178 +28,331 @@
         border-radius: 4px;
         cursor: pointer;
       }
+
       .container {
         padding: 30px;
         max-width: 1200px;
         margin: auto;
       }
+
+      .card {
+        background: white;
+        padding: 25px;
+        border-radius: 8px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+      }
+
       table {
         width: 100%;
         border-collapse: collapse;
-        background: white;
+        margin-top: 15px;
       }
+
       th,
       td {
         padding: 12px;
         border-bottom: 1px solid #ddd;
+        font-size: 14px;
         vertical-align: top;
       }
+
       th {
         background: #edf2f7;
       }
-      .hash {
-        font-size: 12px;
-        font-family: monospace;
-        word-break: break-all;
-      }
-      select,
+
       button {
-        padding: 6px;
-      }
-      button {
-        background: #3182ce;
-        color: white;
-        border: none;
+        padding: 6px 10px;
         border-radius: 4px;
+        border: none;
         cursor: pointer;
+        color: white;
+        font-size: 13px;
       }
+
+      .preview-btn {
+        background: #38a169;
+        margin-right: 5px;
+      }
+
       .delete-btn {
         background: #e53e3e;
         margin-top: 6px;
+      }
+
+      .ledger-btn {
+        background: #805ad5;
+        margin-top: 6px;
+      }
+
+      .restore-btn {
+        background: #3182ce;
+        margin-top: 6px;
+      }
+
+      .hash {
+        font-family: monospace;
+        font-size: 12px;
+        word-break: break-all;
+      }
+
+      .verified {
+        color: green;
+        font-weight: bold;
+      }
+
+      .tampered {
+        color: red;
+        font-weight: bold;
+      }
+
+      .deleted {
+        color: gray;
+        font-weight: bold;
+      }
+
+      /* Modal Styles */
+      #ledgerModal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+      }
+
+      #ledgerModalContent {
+        background: white;
+        width: 85%;
+        max-width: 950px;
+        padding: 20px;
+        border-radius: 10px;
+        max-height: 80%;
+        overflow: auto;
+      }
+
+      #ledgerModalContent table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+
+      #ledgerModalContent th,
+      #ledgerModalContent td {
+        padding: 10px;
+        border: 1px solid #ddd;
+        font-size: 13px;
+        text-align: left;
+      }
+
+      #ledgerModalContent th {
+        background: #f1f5f9;
+      }
+
+      .close-btn {
+        padding: 8px 15px;
+        background: red;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
       }
     </style>
   </head>
 
   <body>
-    <!-- 🔐 ROLE CHECK -->
-    <script>
-      const role = localStorage.getItem("role");
-      const token = localStorage.getItem("token");
-
-      if (role !== "admin" || !token) {
-        alert("Unauthorized. Please login again.");
-        window.location.href = "../../login.html";
-      }
-    </script>
-
     <header>
       <h2>Admin Dashboard</h2>
-      <button class="logout-btn" onclick="logout()">Logout</button>
+      <button class="logout" onclick="logout()">Logout</button>
     </header>
 
     <div class="container">
-      <table>
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>📄 Document Details</th>
-            <th>📌 Status</th>
-            <th>🛡️ Integrity</th>
-            <th>🔐 Actions</th>
-          </tr>
-        </thead>
-        <tbody id="docsTable"></tbody>
-      </table>
+      <div class="card">
+        <h3>All Trade Finance Documents</h3>
+
+        <table>
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>File</th>
+              <th>Owner</th>
+              <th>Status</th>
+              <th>Hash</th>
+              <th>Integrity</th>
+              <th>Deleted?</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="docsTable"></tbody>
+        </table>
+      </div>
+    </div>
+
+    <!-- Ledger Modal -->
+    <div id="ledgerModal">
+      <div id="ledgerModalContent">
+        <h2>Ledger History</h2>
+
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Action</th>
+              <th>Actor</th>
+              <th>Timestamp</th>
+              <th>Event Data</th>
+            </tr>
+          </thead>
+          <tbody id="ledgerTableBody"></tbody>
+        </table>
+
+        <br />
+        <button class="close-btn" onclick="closeLedgerModal()">Close</button>
+      </div>
     </div>
 
     <script>
-      const API_BASE = "http://127.0.0.1:8000";
+      const token = localStorage.getItem("token");
+      const role = localStorage.getItem("role");
 
-      // 📥 LOAD ALL DOCUMENTS
-      async function loadDocuments() {
-        const res = await fetch(`${API_BASE}/documents`, {
-          headers: {
-            Authorization: `Bearer ${localStorage.getItem("token")}`,
-          },
-        });
-
-        const docs = await res.json();
-        const tbody = document.getElementById("docsTable");
-        tbody.innerHTML = "";
-
-        docs.forEach((doc, i) => {
-          const row = document.createElement("tr");
-
-          row.innerHTML = `
-            <td>${i + 1}</td>
-
-            <td>
-              <b>File:</b> ${doc.filename}<br><br>
-              <b>Uploaded By:</b> ${doc.owner_email}<br><br>
-              <b>Hash:</b>
-              <div class="hash">${doc.file_hash}</div>
-              <br>
-              <a href="http://127.0.0.1:8000/documents/${doc.id}/preview" target="_blank">
-                🔍 Preview
-              </a>
-            </td>
-
-            <td><b>${doc.status}</b></td>
-
-            <td>
-              ${
-                doc.tampered
-                  ? '<span style="color:red;font-weight:bold">❌ Tampered</span>'
-                  : '<span style="color:green;font-weight:bold">✅ Verified</span>'
-              }
-            </td>
-
-            <td>
-              <select id="role-${doc.id}">
-                <option value="corporate" ${doc.access_role === "corporate" ? "selected" : ""}>Corporate</option>
-                <option value="bank" ${doc.access_role === "bank" ? "selected" : ""}>Bank</option>
-                <option value="auditor" ${doc.access_role === "auditor" ? "selected" : ""}>Auditor</option>
-              </select>
-
-              <br><br>
-
-              <button onclick="updateRole(${doc.id})">Update</button>
-              <br>
-              <button class="delete-btn" onclick="deleteDoc(${doc.id})">Delete</button>
-            </td>
-          `;
-
-          tbody.appendChild(row);
-        });
-      }
-
-      // 🔄 UPDATE ACCESS ROLE
-      async function updateRole(docId) {
-        const role = document.getElementById(`role-${docId}`).value;
-
-        await fetch(`${API_BASE}/documents/${docId}/access-role?role=${role}`, {
-          method: "PUT",
-          headers: {
-            Authorization: `Bearer ${localStorage.getItem("token")}`,
-          },
-        });
-
-        alert("Access updated ✅");
-      }
-
-      // 🗑️ DELETE DOCUMENT (ADMIN)
-      async function deleteDoc(docId) {
-        if (!confirm("Are you sure you want to delete this document?")) return;
-
-        const res = await fetch(`${API_BASE}/documents/${docId}`, {
-          method: "DELETE",
-          headers: {
-            Authorization: `Bearer ${localStorage.getItem("token")}`,
-          },
-        });
-
-        if (!res.ok) {
-          alert("Delete failed");
-          return;
-        }
-
-        alert("Document deleted successfully 🗑️");
-        loadDocuments();
+      if (!token || role !== "admin") {
+        window.location.href = "../../login.html";
       }
 
       function logout() {
         localStorage.clear();
         window.location.href = "../../login.html";
+      }
+
+      async function loadDocuments() {
+        const res = await fetch("http://127.0.0.1:8000/documents", {
+          headers: { Authorization: "Bearer " + token },
+        });
+
+        const docs = await res.json();
+        docs.sort((a, b) => a.id - b.id);
+
+        const table = document.getElementById("docsTable");
+        table.innerHTML = "";
+
+        docs.forEach((doc, i) => {
+          const integrity = doc.tampered
+            ? `<span class="tampered">❌ Tampered</span>`
+            : `<span class="verified">✅ Verified</span>`;
+
+          const deletedStatus = doc.is_deleted
+            ? `<span class="deleted">YES</span>`
+            : `<span class="verified">NO</span>`;
+
+          let restoreButton = "";
+          if (doc.is_deleted === true) {
+            restoreButton = `<button class="restore-btn" onclick="restoreDoc(${doc.id})">Restore</button><br>`;
+          }
+
+          table.innerHTML += `
+            <tr>
+              <td>${i + 1}</td>
+              <td>${doc.filename}</td>
+              <td>${doc.owner_email}</td>
+              <td>${doc.status}</td>
+              <td class="hash">${doc.file_hash}</td>
+              <td>${integrity}</td>
+              <td>${deletedStatus}</td>
+
+              <td>
+                <button class="preview-btn" onclick="previewDoc(${doc.id})">Preview</button>
+                <button class="ledger-btn" onclick="viewLedger(${doc.id})">View Ledger</button>
+                <br>
+                ${restoreButton}
+                <button class="delete-btn" onclick="deleteDoc(${doc.id})">Delete</button>
+              </td>
+            </tr>
+          `;
+        });
+      }
+
+      function previewDoc(id) {
+        window.open(`http://127.0.0.1:8000/documents/${id}/preview`, "_blank");
+      }
+
+      async function deleteDoc(id) {
+        if (!confirm("Are you sure you want to delete this document?")) return;
+
+        const res = await fetch(`http://127.0.0.1:8000/documents/${id}`, {
+          method: "DELETE",
+          headers: { Authorization: "Bearer " + token },
+        });
+
+        if (!res.ok) {
+          alert("Delete failed ❌");
+          return;
+        }
+
+        alert("Document deleted successfully ✅");
+        loadDocuments();
+      }
+
+      async function restoreDoc(id) {
+        if (!confirm("Restore this document from quarantine?")) return;
+
+        const res = await fetch(
+          `http://127.0.0.1:8000/documents/${id}/restore`,
+          {
+            method: "PUT",
+            headers: { Authorization: "Bearer " + token },
+          },
+        );
+
+        if (!res.ok) {
+          alert("Restore failed ❌");
+          return;
+        }
+
+        alert("Document restored successfully ✅");
+        loadDocuments();
+      }
+
+      async function viewLedger(docId) {
+        try {
+          const res = await fetch(
+            `http://127.0.0.1:8000/documents/${docId}/ledger`,
+            {
+              headers: { Authorization: "Bearer " + token },
+            },
+          );
+
+          if (!res.ok) {
+            alert("Failed to fetch ledger history ❌");
+            return;
+          }
+
+          const data = await res.json();
+
+          let rows = "";
+          data.forEach((entry) => {
+            rows += `
+              <tr>
+                <td>${entry.id}</td>
+                <td>${entry.action}</td>
+                <td>${entry.actor_email}</td>
+                <td>${entry.timestamp}</td>
+                <td>${JSON.stringify(entry.event_data)}</td>
+              </tr>
+            `;
+          });
+
+          document.getElementById("ledgerTableBody").innerHTML = rows;
+          document.getElementById("ledgerModal").style.display = "flex";
+        } catch (err) {
+          console.error(err);
+          alert("Error fetching ledger history ❌");
+        }
+      }
+
+      function closeLedgerModal() {
+        document.getElementById("ledgerModal").style.display = "none";
       }
 
       loadDocuments();
