--- a/frontend/src/auditor/auditor.html
+++ b/frontend/src/auditor/auditor.html
@@ -97,6 +97,78 @@
         color: red;
         font-weight: bold;
       }
+
+      button {
+        padding: 6px 10px;
+        border-radius: 4px;
+        border: none;
+        cursor: pointer;
+        color: white;
+        font-size: 13px;
+      }
+
+      .preview-btn {
+        background: #38a169;
+        margin-right: 6px;
+      }
+
+      .ledger-btn {
+        background: #805ad5;
+      }
+
+      /* Modal Styles */
+      #ledgerModal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+      }
+
+      #ledgerModalContent {
+        background: white;
+        width: 85%;
+        max-width: 950px;
+        padding: 20px;
+        border-radius: 10px;
+        max-height: 80%;
+        overflow: auto;
+      }
+
+      #ledgerModalContent h2 {
+        margin-top: 0;
+      }
+
+      #ledgerModalContent table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+
+      #ledgerModalContent th,
+      #ledgerModalContent td {
+        padding: 10px;
+        border: 1px solid #ddd;
+        font-size: 13px;
+        text-align: left;
+      }
+
+      #ledgerModalContent th {
+        background: #f1f5f9;
+      }
+
+      .close-btn {
+        padding: 8px 15px;
+        background: red;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
     </style>
   </head>
 
@@ -123,6 +195,7 @@
               <th>Hash</th>
               <th>Status</th>
               <th>Integrity</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody id="auditTable"></tbody>
@@ -130,17 +203,86 @@
       </div>
     </div>
 
+    <!-- Ledger Modal -->
+    <div id="ledgerModal">
+      <div id="ledgerModalContent">
+        <h2>Ledger History</h2>
+
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Action</th>
+              <th>Actor</th>
+              <th>Timestamp</th>
+              <th>Event Data</th>
+            </tr>
+          </thead>
+          <tbody id="ledgerTableBody"></tbody>
+        </table>
+
+        <br />
+        <button class="close-btn" onclick="closeLedgerModal()">Close</button>
+      </div>
+    </div>
+
     <script>
       const token = localStorage.getItem("token");
+      const role = localStorage.getItem("role");
 
       // 🔐 Protect page
-      if (!token) {
+      if (!token || role !== "auditor") {
         window.location.href = "../../login.html";
       }
 
       function logout() {
         localStorage.clear();
         window.location.href = "../../login.html";
+      }
+
+      function previewDoc(id) {
+        window.open(`http://127.0.0.1:8000/documents/${id}/preview`, "_blank");
+      }
+
+      async function viewLedger(docId) {
+        try {
+          const res = await fetch(
+            `http://127.0.0.1:8000/documents/${docId}/ledger`,
+            {
+              headers: { Authorization: "Bearer " + token },
+            },
+          );
+
+          if (!res.ok) {
+            alert("Failed to fetch ledger history ❌");
+            return;
+          }
+
+          const data = await res.json();
+
+          let rows = "";
+          data.forEach((entry) => {
+            rows += `
+              <tr>
+                <td>${entry.id}</td>
+                <td>${entry.action}</td>
+                <td>${entry.actor_email}</td>
+                <td>${entry.timestamp}</td>
+                <td>${JSON.stringify(entry.event_data)}</td>
+              </tr>
+            `;
+          });
+
+          document.getElementById("ledgerTableBody").innerHTML = rows;
+          document.getElementById("ledgerModal").style.display = "flex";
+        } catch (err) {
+          console.error(err);
+          alert("Error fetching ledger history ❌");
+        }
+      }
+
+      function closeLedgerModal() {
+        document.getElementById("ledgerModal").style.display = "none";
       }
 
       async function loadAuditData() {
@@ -155,7 +297,6 @@
 
           let docs = await res.json();
 
-          // ✅ SORT BY ID (number-wise)
           docs.sort((a, b) => a.id - b.id);
 
           const table = document.getElementById("auditTable");
@@ -177,6 +318,10 @@
               <td class="hash">${doc.file_hash}</td>
               <td class="${statusClass}">${doc.status}</td>
               <td>${integrityHtml}</td>
+              <td>
+                <button class="preview-btn" onclick="previewDoc(${doc.id})">Preview</button>
+                <button class="ledger-btn" onclick="viewLedger(${doc.id})">View Ledger</button>
+              </td>
             `;
 
             table.appendChild(row);
